--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-between;
+    
+}
+.card{
+    margin-left: 5%;
+    background-color: rgb(202, 202, 233);
+    border-radius: 15px;
+    width: 150px;
+    text-align: center;
+}
+h1{
+    text-align: center;
+    color: gray;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+    text-align: center;
+    color: rgb(0, 68, 255);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.color-div{
+    width: 150px;
+    height: 150px;
+   
+   
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.color-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 1rem;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+    margin: 1rem auto;
+    text-align: center;
+    border: 1px solid #c1c1c1;
+    padding: 10px;
+    
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-container h5{
+    margin-right: 3rem;
 }
